--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*navigation*/
 .navbar {
-    posion: fixed;
+    position: fixed;
     top: 0;
     width: 100%;
     padding: 1.5rem 5%;
@@ -14,5 +14,16 @@
 }
 
 .nav-links {
-    
+    display: flex;
+    gap: rem;
+    list-style: none;
 }
+
+.nav-links a{
+    color: var(--text);
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.3 ease;
+    position: relative;
+}
+
